Changed Application to Manually Bootstrap Angular after Device is Ready

--- a/Let's Park/Let's Park/www/index.html
+++ b/Let's Park/Let's Park/www/index.html
@@ -21,8 +21,9 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbivI58RdaZo3FB7jkcsCtL6NwrUzBCgY"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/manualBootstrap.js"></script>
 </head>
-<body ng-app="starter">
+<body id="ngAppElement">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
