--- a/Let's Park/Let's Park/www/index.html
+++ b/Let's Park/Let's Park/www/index.html
@@ -18,7 +18,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <!-- For Google Maps API: -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbivI58RdaZo3FB7jkcsCtL6NwrUzBCgY"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbivI58RdaZo3FB7jkcsCtL6NwrUzBCgY&libraries=places&sensor=false"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/manualBootstrap.js"></script>
